# subliminal_learning

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/experiments/: gemma-3-12b-it.yaml  gemma-3-4b-it-local-1000.yaml  gemma-3-4b-it.yaml
scripts/: bootstrap_gpu.sh
src/subliminal_learning/: __init__.py  cli.py  config.py  generation.py  io_utils.py  modeling.py  prompt_templates.py
src/subliminal_learning/stages/: __init__.py  evaluate_owl.py  filter_transfer_data.py  generate_trait_pairs.py  generate_transfer_data.py  make_transfer_prompts.py  prepare_trait_dataset.py  train_students_sft.py  train_teacher_dpo.py
